beforeDateTypeChangedAndSalesInvoiceReportCompleted[26/06/2024]