@@ -1,21 +1,22 @@
 package com.appli.clcapi.confirmInvoice.confirmCartItems.serviceImple;
 
 import com.appli.clcapi.common.response.NonPaginatedResponse;
-import com.appli.clcapi.confirmInvoice.dto.ConfirmInvoiceDto;
+import com.appli.clcapi.confirmInvoice.confirmCartItems.dto.ConfirmProductCartDto;
+
 import com.appli.clcapi.confirmInvoice.entity.ConfirmInvoiceEntity;
 import com.appli.clcapi.confirmInvoice.repository.ConfirmInvoiceRepo;
 import com.appli.clcapi.confirmInvoice.confirmCartItems.entity.ConfirmProductCartEntity;
 import com.appli.clcapi.confirmInvoice.confirmCartItems.repository.ConfirmProductCartRepo;
 import com.appli.clcapi.confirmInvoice.confirmCartItems.service.ConfirmProductCartService;
+
 import com.appli.clcapi.productCart.entity.ProductCartEntity;
 import com.appli.clcapi.productCart.repository.ProductCartRepo;
-import com.appli.clcapi.stock.dto.StockDto;
-import com.appli.clcapi.stock.entity.StockEntity;
-import com.appli.clcapi.tempInvoice.repository.TempInvoiceRepo;
+
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+
 
 import java.util.Arrays;
 import java.util.List;
@@ -25,16 +26,15 @@ import java.util.List;
 public class ConfirmProductCartServiceImple implements ConfirmProductCartService {
     private final ProductCartRepo productCartRepo;
     private final ConfirmProductCartRepo confirmProductCartRepo;
-    private final ConfirmInvoiceRepo confirmInvoiceRepo;
 
     @Override
     @Transactional
     public Boolean confirmTheCartItems(Long invoiceId, ConfirmInvoiceEntity confirmInvoice) {
         NonPaginatedResponse response = new NonPaginatedResponse();
-        try{
+        try {
             List<ProductCartEntity> listOfProCarts = productCartRepo.findByTempInvoiceEntity_TempInvoiceId(invoiceId);
 
-            for(ProductCartEntity aCart: listOfProCarts){
+            for (ProductCartEntity aCart : listOfProCarts) {
                 ConfirmProductCartEntity confirmProductCartEntity = ConfirmProductCartEntity.builder()
                         .confirmProductCartId(aCart.getProCartId())
                         .discount(aCart.getDiscount())
@@ -47,14 +47,33 @@ public class ConfirmProductCartServiceImple implements ConfirmProductCartService
             }
             return true;
 
-        }catch (Exception e){
+        } catch (Exception e) {
             e.printStackTrace();
-            response.setErrors(Arrays.asList("Couldn't Confirm the Cart Items"));
+            response.setErrors(List.of("Couldn't Confirm the Cart Items"));
             response.setStatus(HttpStatus.BAD_REQUEST);
             return false;
         }
 
     }
 
+    @Override
+    public NonPaginatedResponse getAllConfirmedProCartItemsByInvoiceId(Long invoiceId) {
+        NonPaginatedResponse response = new NonPaginatedResponse();
+        try {
+            List<ConfirmProductCartEntity> cartList = confirmProductCartRepo.findByConfirmInvoiceEntity_ConfirmInvoiceId(invoiceId);
+            List<ConfirmProductCartDto> confirmProductCartDtoList = cartList.stream()
+                    .map(ConfirmProductCartDto::new)
+                            .toList();
+
+
+            response.setResult(confirmProductCartDtoList);
+            response.setStatus(HttpStatus.OK);
+            response.setSuccessMessage("Confirmed Sales invoice cart records Retrieved!");
+        } catch (Exception e) {
+            response.setStatus(HttpStatus.BAD_REQUEST);
+            response.setErrors(List.of("Couldn't retrieve Sales invoice cart records!"));
+        }
+        return response;
+    }
 
 }
